--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ nav ul li a{
 main section {
 
     background-color: #f9f9f9;
-    margin: 15px;
+    margin: 15px 15px 15px 15px;
     padding: 20px;
+    margin-top: 0px;
 
 }
 
@@ -148,3 +149,75 @@ padding: 10px;
 
 }
 
+
+.flex-container {
+
+    width: auto;
+    height:150px;
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    
+    
+    }
+
+    .flex-container section {
+
+        margin: 10px;
+        flex-grow: 1;
+
+        
+        }
+
+        .flex-container article {
+
+            flex-grow: 1;
+
+            }
+
+
+    .flex-container-2  {
+
+        width: auto;
+        height: auto;
+        display: flex;
+        justify-content: left;
+        align-content: center;
+        margin: 10px 10px 0px 10px;
+
+        
+        
+        }
+
+        .flex-container-2 aside {
+            flex: 0 0 25%;
+            margin: 5px;
+            
+            
+            
+
+        }
+
+        .flex-container-2 .main_content {
+            flex-grow: 1;
+            margin: 5px;
+
+        }
+
+        .flex-container-2 .main_content .flex-items-1 {
+
+
+            margin: auto;
+        }
+
+        .flex-container-2 .main_content .flex-items-2 {
+            background-color: #f0f0f000;
+            margin: auto;
+        }
+        
+        
+ 
+   
