--- a/style.css
+++ b/style.css
@@ -153,13 +153,14 @@ padding: 10px;
 .flex-container {
 
     width: auto;
-    height:150px;
+    height:140px;
     padding: 0px 0px 0px 0px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
     align-content: center;
+    margin-left: 5px;
     
     
     }
@@ -186,7 +187,7 @@ padding: 10px;
         display: flex;
         justify-content: left;
         align-content: center;
-        margin: 10px 10px 0px 10px;
+        margin: 0px 10px 0px 10px;
 
         
         
@@ -195,6 +196,8 @@ padding: 10px;
         .flex-container-2 aside {
             flex: 0 0 25%;
             margin: 5px;
+            margin-bottom: 0px;
+
             
             
             
